# anson.cmake

./: .gitignore  CMakeLists.txt  README.md  issues.md  node-types-classfields.json  node-types.json  vcpkg.json
peers.py3/src/semantic_peer/io/oz/semanticpeer/: generator.py
peers.py3/test/: t_01_gen_echomsg.py  t_02_gen_synode_peer.py
peers.py3/test/ast/: echo2.ast.json  session-req.ast.json  session-resp.ast.json
peers.py3/test/settings/: t_01-settings.json  t_02-synode-cpp.json
src/: CMakeLists.txt  anson_parser.py  del_anson_parser.py  del_gen-registry-refact1.py  del_gen-registry.py  del_query_strings.py  gen-registry-2.py  gen-registry-4.py  gen-registry-7.py  gen-registry-refact1.py  gen-registry.py  query_strings.py
src/ast/: ast-settings.json  msgcode.ast.json
src/dev/: ping.cpp
src/io/odysz/: anserializer.h  anson-trying-enttypid-in-ast.h  anson.delete.h  anson.h  common.h  dbmeta.h  entt_jserv.h  jprotocol.h  json.h  json.hpp  reflect.h  semantier.h  serializer.h  utils.h
src/io/odysz/module/: rs.h
src/io/odysz/semantic/: x.h
src/io/odysz/transact/: x.h
src/test-registry-delete/: t_01registry.py  test.json  test.py
src/test-registry-delete/io/odysz/: json.test.hpp  templates.test.h
test-registry/: ast-echo-req.json  del_02parse.py  del_03template-field.py  t-01-config.json  t-01.json  t-02-docsreq-config.json  t-02-enum-config.json  t-03-docs-config.json  t-04-ports-config.json  t_01_echo.py  t_01handlecomment.py  t_02_docsreq.py  t_02_enum.py  t_02registry.py  t_03.json  t_03_docsreq.py  t_03template-field.py  test.json  test.py
test-registry-delete/: t-01-config.json  t_01_echo.py
test-registry-delete/ast/: wsecho.ast.json  wsport.ast.json
test-registry-delete/io/odysz/: json.test.hpp
test-registry/ast/: device.ast.json  docsreq.ast.json  echo.ast.json  pageinf.ast.json  pathspage.ast.json  port.ast.json  wsecho.ast.json
test-registry/io/odysz/: templates.03.h
tests/: CMakeLists.txt  debug-output.txt  echoreq.expect.h  echoreq.h  gen.json  semantier.h  t01_aeshelper.cpp  t01_common.cpp  t01_enttmeta.cpp  t01_try_typed_enum.cpp  t01_typs_java_vs.cpp  t02-settings.json  t02_deserialize.cpp  t02_entt_basic.cpp  t02_entt_basic.h  t02_entt_basic_serialize.cpp  t02_enttmeta.cpp  t02_loadsettings.cpp  t02_type_java_tests.cpp  t02_type_java_tests.h  t03-settings.json  t03_deserialize.cpp  t03_echo.body.json  t03_loadsettings.cpp  t04_entt_registry.cpp  t04_java_enum.cpp  t04_java_enum.h  t05_deserialize.cpp  t06_java_enum.cpp  t06_java_enum.h  t07_ansonresp.cpp  t08_resultset.cpp  t08_resultset.h  t09_expect_semantier.cpp  t10_design_patterns.cpp  t10_expect_session.cpp  t11_docstier.cpp  t12_escape.cpp  test.common.h  test_common.cpp
tests/ast/: body.ast.json  body.ast.json-delete  device.ast.json  docsreq.ast.json  docsresp.ast.json  echo-msg.ast.json  echo.ast.json  heartbeat.ast.json  photo_css.json  port.ast-only-4-t03.json  port.ast.json  usereq.ast.json  wsport.ast.json
tests/expect/: README.md  dbmeta.h  t_01_echomsg.hpp  t_01_semantier.hpp  t_02_jserv.hpp  t_02_semantier.delete.hpp  t_02_semantier.hpp  t_10_doctier.hpp  wsport_tobe_generated.hpp
